_sass/_layout.scss
body, html {
  padding: 0;
  margin: 0;
  width: 100vw;
  min-height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
  @include font-garamond;
}

// We're going to have a full-width page.
header {
  background-image: url(../images/header-stripe.svg);
  background-repeat: repeat-x;
  width: 100%;
  height: 2rem;

  &.mini {
    height: 10px;
  }
}

body > section[role] {
  @media (max-width: 800px) {
    & {
      height: auto;
      justify-content: center;

      > div.wrapper {
        padding: 20px 10px 0;
        height: auto;
      }
    }
  }
}

section[role=coming-soon] {
  flex: 1;
  background-image: url(../images/coming-soon.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 85vh;
  display: flex;
  flex-direction: column;
  position: relative;

  &::before {
    background-color: $clr-clearGrey;
    bottom: 0;
    content: "";
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }

  > p {
    margin: 0;
    text-align: center;

    > a {
      @include font-brandon;
      color: $clr-white;
    }
  }

  .photo-credit {
    position: relative;
    padding: 20px 0;

    > a {
      color: $clr-pinkishGrey;
    }
  }

  > div.wrapper {
    position: relative;
    width: auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    > h1 {
      @include font-garamond;
      color: $clr-white;
      font-size: 45px;
      font-weight: 500;
      margin: 0;
    }

    > h2 {
      margin: 0;
      @include font-brandon;
      font-weight: 900;
      text-transform: uppercase;
      letter-spacing: 2px;
      color: $clr-dirtBrown;
    }

    > h1, > h2 {
      text-align: center;
    }

    > p {
      color: $clr-white;
      text-align: center;
      font-size: 20px;
      max-width: 500px;
      font-weight: 500;
    }

    > form {
      input[type=submit], input[type=email] {
        height: 25px;
        width: 275px;
        padding: 10px;
        font-size: 18px;
      }

      input[type=email] {
        -webkit-appearance: none;
        @include font-brandon;
        background-color: $clr-white;
        border: none;
        color: $clr-clearGrey;

        &:focus {
          color: $clr-dirtBrown;
          outline: 1px dotted $clr-grey;
        }
      }

      input[type=submit] {
        width: 115px;
        height: 45px;
        border: none;
        border-radius: 5px;
        background-color: $clr-leather;
        -webkit-appearance: none;
        box-shadow: 0 3px 0 0 $clr-mudBrown;
        @include font-brandon;
        font-size: 18px;
        font-weight: 900;
        letter-spacing: 1px;
        color: $clr-white;

        &:hover {
          cursor: pointer;
          background-color: $clr-darkTan;
          box-shadow: 0 3px 0 0 $clr-leather;
        }

        &:active {
          background-color: $clr-mudBrown;
          box-shadow: 0 3px 0 0 $clr-dirtBrown;
          outline: none;
          color: $clr-sand;
        }

        &:focus {
          outline: 1px dotted $clr-dirtBrown;
        }
      }

      @media (max-width: 800px) {
        & {
          display: flex;
          align-items: center;
          flex-direction: column;

          input[type=submit] {
            margin-top: 5px;
            width: 150px;
          }
        }
      }
    }
  }
}

footer {
  @include font-brandon;
  height: 70px;
  background-color: $clr-tan;
  color: $clr-dirtBrown;
  text-align: center;
  display: flex;
  justify-content: center;
  flex-direction: column;

  a {
    color: $clr-dirtBrown;
  }
}

